--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^4.9.9",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.9.6",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,10 +16,10 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
-    "reselect": "^4.0.0",
-    "styled-components": "^5.0.1"
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
